fix: clean code and fix some erratas

--- a/example.env
+++ b/example.env
@@ -1,12 +1,19 @@
 # PopulPy Environment Variables
-# Replace these values with your actual API keys
+# --------------------------------
+# Rename this file to '.env' and fill in your API keys
+# --------------------------------
 
-# Google API credentials
-GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY
-SEARCH_ENGINE_ID=YOUR_SEARCH_ENGINE_ID
+# Google Custom Search API key
+# Get it from: https://developers.google.com/custom-search/v1/overview
+GOOGLE_API_KEY=your_google_api_key_here
 
-# Bing API credentials
-BING_API_KEY=YOUR_BING_API_KEY
+# Google Custom Search Engine ID
+# Create one at: https://programmablesearchengine.google.com/
+SEARCH_ENGINE_ID=your_search_engine_id_here
 
-# Database settings (optional)
-# DATABASE_PATH=sqlite:///your_custom_path.db
+# Bing Search API key (optional)
+# Get it from: https://www.microsoft.com/en-us/bing/apis/bing-web-search-api
+BING_API_KEY=your_bing_api_key_here
+
+# Optional: Database path (defaults to searches.db in the root folder)
+# DATABASE_PATH=path/to/your/database.db
